# ComfyUI-EdgeTTS

./: README.md  __init__.py  ailab_edgeTTS.py  ailab_whisperSTT.py  config.json  pyproject.toml  requirements.txt  update.md
